--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,7 +58,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="ParkEasy"
+                    android:text="ParkingU"
                     android:textColor="@android:color/white"
                     android:textSize="32sp"
                     android:textStyle="bold"
