--- a/app/src/main/res/layout/fragment_parking_owner_parking_list.xml
+++ b/app/src/main/res/layout/fragment_parking_owner_parking_list.xml
@@ -47,7 +47,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="ParkEasy"
+                    android:text="ParkingU"
                     android:textColor="@android:color/white"
                     android:textSize="28sp"
                     android:textStyle="bold" />
